# srfm-lab

./: .gitignore  ANATOMY.md  CHANGELOG.md  Cargo.toml  Dockerfile.python  HYPOTHESIS.md  JOURNAL.md  Makefile  README.md  RESULTS.md  book_audit_fixes.py  btc_live.json  docker-compose.yml  gen_book.py  gen_book_visuals.py  gen_paper.py  gen_pdf_clean.py  index.html  inject_extended.py  inject_plain_english.py  ng_test.txt  pyproject.toml  requirements.txt  restyle_book.py  run_aeternus_experiment.py  run_aeternus_real.py  run_api.py  run_full_analysis.py  run_iae_analysis.py
cpp/signal-engine/: CMakeLists.txt  build.sh
cpp/signal-engine/benchmarks/: bench_signal_throughput.cpp
cpp/signal-engine/build_qn/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  signal_engine_bench.vcxproj  signal_engine_bench.vcxproj.filters  signal_engine_cli.vcxproj  signal_engine_cli.vcxproj.filters  signal_engine_lib.vcxproj  signal_engine_lib.vcxproj.filters  signal_engine_tests.vcxproj  signal_engine_tests.vcxproj.filters  srfm_signal_engine.sln  test_bh_physics.vcxproj  test_bh_physics.vcxproj.filters  test_garch.vcxproj  test_garch.vcxproj.filters  test_indicators.vcxproj  test_indicators.vcxproj.filters  test_performance.vcxproj  test_performance.vcxproj.filters  test_quat_nav.vcxproj  test_quat_nav.vcxproj.filters  test_ring_buffer.vcxproj  test_ring_buffer.vcxproj.filters
cpp/signal-engine/include/: latency_tracker.hpp  microstructure_indicators.hpp  pattern_detector.hpp  signal_combiner.hpp
cpp/signal-engine/src/: latency_tracker.cpp  main.cpp  microstructure_indicators.cpp  pattern_detector.cpp  signal_combiner.cpp
cpp/signal-engine/tests/: test_bh_physics.cpp  test_garch.cpp  test_indicators.cpp  test_performance.cpp  test_quat_nav.cpp  test_ring_buffer.cpp  test_volume_profile.cpp
crates/alpha-decay/: Cargo.toml
crates/alpha-decay/src/: lib.rs
crates/counterfactual-engine/: Cargo.toml
crates/counterfactual-engine/src/: causal_graph.rs  lib.rs  main.rs  sampler.rs  sensitivity.rs
crates/counterfactual-engine/tests/: counterfactual_tests.rs
crates/execution-optimizer/: Cargo.toml
crates/execution-optimizer/src/: adaptive_optimizer.rs  almgren_chriss.rs  execution_simulator.rs  impact.rs  lib.rs  optimal_execution.rs  schedule.rs  twap.rs  vwap.rs
crates/factor-analytics/: Cargo.toml
crates/factor-analytics/src/: error.rs  lib.rs
crates/fix-engine/: Cargo.toml
crates/fix-engine/src/: codec.rs  execution_report_parser.rs  lib.rs  message.rs  order_manager.rs  parser.rs  session.rs  session_manager.rs  store.rs  types.rs
crates/fractal-engine/: Cargo.toml
crates/fractal-engine/src/: detrending.rs  fractal_dim_ext.rs  fractal_dimension.rs  hurst.rs  lib.rs  main.rs  multifractal.rs  pattern_library.rs  regime_detector.rs  similarity.rs  wavelet.rs
crates/fractal-engine/tests/: fractal_tests.rs
crates/idea-genome-engine/: Cargo.toml  Dockerfile
crates/idea-genome-engine/src/: archive.rs  constraint_handler.rs  crossover_strategies.rs  evolution.rs  fitness.rs  genome.rs  lib.rs  main.rs  mutation_strategies.rs  population.rs  selection_strategies.rs
crates/idea-genome-engine/tests/: genome_tests.rs
crates/larsa-core/: Cargo.toml  pyproject.toml
crates/larsa-core/src/: lib.rs  live_performance.rs  multi_timeframe.rs  parameter_sensitivity.rs  regime_filter.rs  signal_quality.rs
crates/larsa-wasm/: Cargo.toml  README.md
crates/larsa-wasm/src/: lib.rs  portfolio_analytics_wasm.rs  realtime_indicators.rs  signal_visualizer.rs
crates/microstructure-engine/: Cargo.toml
crates/microstructure-engine/src/: amihud.rs  kyle_lambda.rs  lib.rs  liquidity_metrics.rs  market_regime_signals.rs  order_flow.rs  pin.rs  roll_spread.rs  streaming_stats.rs  tick_bars.rs  trade_flow_analysis.rs
crates/monte-carlo-engine/: Cargo.toml
crates/monte-carlo-engine/src/: bootstrap.rs  gbm_paths.rs  lib.rs  main.rs  option_pricer.rs  simulation.rs  stress_tests.rs  var_calculator.rs
crates/monte-carlo-engine/tests/: mc_tests.rs
crates/network-graph/: Cargo.toml
crates/network-graph/src/: centrality.rs  community_detection.rs  contagion_model.rs  correlation_graph.rs  correlation_matrix.rs  granger_causality.rs  graph_signal.rs  hypergraph.rs  lead_lag.rs  lead_lag_analyzer.rs  lib.rs  main.rs  minimum_spanning_tree.rs  network_risk.rs  network_signal.rs  regime_correlation.rs  ricci_curvature.rs  temporal_graph.rs
crates/online-learning/: Cargo.toml
crates/online-learning/src/: adaptive_learning_rate.rs  bandit_explorer.rs  lib.rs  (+5 more)
crates/options-engine/: Cargo.toml
crates/order-flow-engine/: Cargo.toml
crates/orderbook-sim/: Cargo.toml
crates/parallel-backtest/: Cargo.toml
crates/portfolio-engine/: Cargo.toml
crates/real-time-analytics/: Cargo.toml
crates/regime-analytics/: Cargo.toml
crates/rl-exit-optimizer/: Cargo.toml
crates/signal-evolution/: Cargo.toml
crates/srfm-tools/: Cargo.toml
crates/synthetic-exchange/: Cargo.toml
crates/tick-backtest/: Cargo.toml
native/: CMakeLists.txt
native/matrix/: CMakeLists.txt  benchmark.cpp  decomposition.cpp  factor_model.cpp  matrix.hpp  optimization.hpp  portfolio_math.cpp  simd_extra.hpp  simd_ops.cpp  statistics.hpp  time_series.hpp
native/orderbook/: CMakeLists.txt  analytics_test.cpp  backtest_main.cpp  backtester.hpp  feed_handler.cpp  feed_handler.hpp  lockfree_queue.hpp  market_impact.cpp  market_impact.hpp  matching_engine.cpp  matching_engine.hpp  network_utils.hpp  order.hpp  order_flow.hpp  order_pool.hpp  orderbook.cpp  orderbook.hpp  price_ladder.hpp  risk_checks.hpp  simulation_main.cpp  strategy_engine.hpp  test_main.cpp  tick_analytics.hpp
native/ringbuffer/: CMakeLists.txt  compressor.cpp  latency_probe.hpp  market_data_store.cpp  replay.hpp  ringbuffer.hpp  shm_channel.hpp  test_main.cpp  tick_store.cpp
native/zig/: build.zig
viz/: Cargo.toml
viz/src/: convergence.rs  diff.rs  equity.rs  experiments.rs  main.rs  snap.rs  spacetime.rs  wells.rs
(+3532 files in other folders)
