[workspace]
members = [
    "crates/larsa-core",
    "crates/orderbook-sim",
    "crates/portfolio-engine",
    "crates/risk-engine",
    "crates/regime-detector",
    "crates/data-pipeline",
    "crates/fix-engine",
    "crates/options-engine",
    "crates/smart-order-router",
    "crates/tick-backtest",
    "crates/idea-genome-engine",
    "crates/counterfactual-engine",
    "crates/monte-carlo-engine",
    "crates/signal-evolution",
    "crates/fractal-engine",
    "crates/rl-exit-optimizer",
    "crates/order-flow-engine",
    "crates/parallel-backtest",
    "crates/srfm-tools",
    "crates/network-graph",
    "crates/real-time-analytics",
    "crates/microstructure-engine",
    "crates/execution-optimizer",
    "crates/online-learning",
    "crates/alpha-decay",
    "crates/regime-analytics",
    "crates/factor-analytics",
    "crates/model-inference",
    "crates/backtest-harness",
    "crates/options-pricing",
    "crates/portfolio-rebalancer",
    "crates/quant-math",
    "crates/risk-analytics",
    "crates/signal-processing",
    "crates/time-series-engine",
    "crates/synthetic-exchange",
    "crates/alpha-tensor",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
nalgebra = "0.33"
statrs = "0.17"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
bytes = "1"
indexmap = "2"
