[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "srfm-lab"
version = "0.1.0"
description = "SRFM Lab — Spacetime Relativistic Financial Mechanics research platform"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    # Data
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "polars>=0.19.0",
    # Analytics
    "duckdb>=0.9.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    # Broker / live trading
    "alpaca-py>=0.13.0",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "orjson>=3.9.0",
    "pyyaml>=6.0.1",
    # Observability
    "prometheus-client>=0.19.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "structlog>=24.1.0",
    "psutil>=5.9.0",
    # Streaming / async
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "aiokafka>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "black>=23.10.0",
    "ipython>=8.17.0",
    "jupyter>=1.0.0",
    "sqlfluff>=2.3.0",
    "memray>=1.5.0",            # memory profiler
    "py-spy>=0.3.14",           # sampling profiler
]
ml = [
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "shap>=0.43.0",
    "optuna>=3.4.0",
    "hmmlearn>=0.3.0",
    "arch>=6.2.0",              # GARCH models
    "river>=0.21.0",            # online/streaming ML
    "ruptures>=1.1.9",          # changepoint detection
    "stumpy>=1.12.0",           # matrix profile
    "tsfresh>=0.20.0",          # time series feature extraction
    "PyWavelets>=1.5.0",        # wavelet transforms
    "nolds>=0.5.2",             # nonlinear dynamics (Hurst, Lyapunov)
    "numba>=0.58.0",            # JIT compilation
    "bottleneck>=1.3.7",        # fast NumPy reductions
    "cvxpy>=1.4.0",             # convex optimization
    "networkx>=3.2.0",          # graph/network analysis
]
reporting = [
    "quantstats>=0.0.62",
    "streamlit>=1.28.0",
    "dash>=2.14.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",           # plotly static image export
    "weasyprint>=60.0",         # PDF report generation
    "empyrical>=0.5.5",         # performance analytics
    "pyfolio-reloaded>=0.9.5",  # portfolio analytics tearsheets
    "alphalens-reloaded>=0.4.4",# factor analysis
    "bokeh>=3.3.0",             # interactive charts
    "panel>=1.3.0",             # dashboarding
    "pyvis>=0.3.2",             # interactive network graphs
    "jinja2>=3.1.0",            # HTML report templating
    "ffn>=0.3.6",               # financial functions
]
options = [
    "py-vollib>=1.0.2",         # options pricing (Black-Scholes, greeks)
    "mibian>=0.1.3",            # options greeks
    "QuantLib>=1.32",           # sophisticated derivatives pricing
]
all = [
    "srfm-lab[dev,ml,reporting,options]",
]

# ─────────────────────────────────────────────────────────────────────────────
# Tool configurations
# ─────────────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations (type hints)
    "TRY",  # tryceratops
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN204", # Missing return type for __init__
    "TRY003", # Long messages in raise
    "E501",   # Line too long (handled by formatter)
    "SIM108", # Use ternary operator (often less readable)
    "B007",   # Loop control variable not used
]

[tool.ruff.isort]
known-first-party = ["spacetime", "tools"]
force-sort-within-sections = true

[tool.ruff.per-file-ignores]
"tests/**" = ["ANN", "S", "E501"]
"tools/**" = ["ANN"]
"strategies/**" = ["ALL"]  # LEAN files have their own conventions

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    strategies/   # LEAN files
  | crates/       # Rust
  | extensions/   # Rust
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true  # Until all stubs are available

[[tool.mypy.overrides]]
module = ["spacetime.engine.*"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tools.*", "strategies.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks integration tests requiring live services",
    "backtest: marks tests that require market data files",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["spacetime"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "strategies/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.setuptools.packages.find]
where = ["."]
include = ["spacetime*", "tools*"]
exclude = ["tests*", "strategies*", "crates*"]
