[package]
name = "srfm-viz"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "srfm-viz"
path = "src/main.rs"

[dependencies]
plotters = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
comfy-table = "7"
csv = "1"
