[package]
name = "factor-analytics"
version = "0.1.0"
edition = "2021"
authors = ["srfm-lab"]
description = "Quantitative factor analytics: construction, normalization, attribution, and backtesting"

[[bin]]
name = "factor_report"
path = "src/bin/factor_report.rs"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-stats = "0.5"
statrs = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.8"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
ordered-float = "4"

[dev-dependencies]
approx = "0.5"
