[package]
name = "fix-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
