[package]
name = "fractal-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fractal-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6"
ndarray = "0.15"
statrs = "0.17"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"

[dev-dependencies]
approx = "0.5"
