[package]
name = "idea-genome-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "idea-genome-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
approx = "0.5"
