[package]
name = "larsa-core"
version = "0.2.0"
edition = "2021"

[lib]
name = "larsa_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["pyo3/extension-module"]
