[package]
name = "larsa-wasm"
version = "0.2.0"
edition = "2021"
description = "WebAssembly analytics module for SRFM dashboard -- rolling indicators, BH mass, equity curve"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[workspace]
