[package]
name = "monte-carlo-engine"
version = "0.1.0"
edition = "2021"
description = "Fast Monte Carlo simulation engine for strategy return distributions"
authors = ["SRFM Lab"]

[[bin]]
name = "monte-carlo-engine"
path = "src/main.rs"

[lib]
name = "monte_carlo_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rayon = "1"
statrs = "0.16"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
