[package]
name = "options-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
nalgebra = { workspace = true }
statrs = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
