[package]
name = "order-flow-engine"
version = "0.1.0"
edition = "2021"
description = "Real-time order flow analysis and classification for the IAE"

[[bin]]
name = "order-flow-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
statrs = "0.16"
rand = { version = "0.8", features = ["small_rng"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
