[package]
name = "parallel-backtest"
version = "0.1.0"
edition = "2021"
description = "Massively parallel parameter sweep engine for BH strategy variants"
license = "MIT"

[[bin]]
name = "parallel-backtest"
path = "src/main.rs"

[lib]
name = "parallel_backtest"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
statrs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
csv = "1"
clap = { version = "4", features = ["derive"] }
rand_distr = "0.4"
memmap2 = "0.9"

[dev-dependencies]
approx = "0.5"
tempfile = "3"
