[package]
name = "regime-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
statrs = { workspace = true }
chrono = { workspace = true }
