[package]
name = "rl-exit-optimizer"
version = "0.1.0"
edition = "2021"
description = "Reinforcement learning agent for optimal trade exit timing in the IAE"

[[bin]]
name = "rl-exit-optimizer"
path = "src/main.rs"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
ndarray = "0.15"
statrs = "0.16"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
