[package]
name = "srfm-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pulse"
path = "src/bin/pulse.rs"

[[bin]]
name = "drift"
path = "src/bin/drift.rs"

[[bin]]
name = "snap"
path = "src/bin/snap.rs"

[[bin]]
name = "srfm"
path = "src/bin/srfm.rs"

[dependencies]
serde_json = "1"
colored = "2"
