[package]
name = "srfm-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pulse"
path = "src/bin/pulse.rs"

[[bin]]
name = "drift"
path = "src/bin/drift.rs"

[[bin]]
name = "snap"
path = "src/bin/snap.rs"

[[bin]]
name = "srfm"
path = "src/bin/srfm.rs"

[[bin]]
name = "sweep"
path = "src/bin/sweep.rs"

[[bin]]
name = "srfm_turbo"
path = "src/bin/srfm_turbo.rs"

[[bin]]
name = "srfm_stream"
path = "src/bin/srfm_stream.rs"

[lib]
name = "srfm_tools"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = "1"
colored = "2"
rayon = "1.10"
csv = "1.3"
ndarray = "0.16"
statrs = "0.17"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
